Setup basic theme layout and toggle theme mode

--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -1,3 +1,11 @@
+html.color-theme-in-transition,
+html.color-theme-in-transition *,
+html.color-theme-in-transition *:before,
+html.color-theme-in-transition *:after {
+  transition: all 750ms !important;
+  transition-delay: 0 !important;
+}
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
