Animated component to animate project list items

--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -3,6 +3,10 @@ html.color-theme-in-transition .main {
   transition-delay: 0 !important;
 }
 
+.tl-edges {
+  overflow-y: hidden;
+}
+
 html {
   font-family: 'Nunito';
   -ms-text-size-adjust: 100%;
