--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -11,6 +11,7 @@ html {
   font-family: 'Nunito';
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  overflow-y: hidden !important;
 }
 body {
   margin: 0;
