--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -3,6 +3,21 @@ html.color-theme-in-transition .main {
   transition-delay: 0 !important;
 }
 
+button,
+textarea,
+input,
+select,
+a,
+.disable-tap-highlight {
+ -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+ -webkit-tap-highlight-color: transparent;
+ -webkit-user-select: none;
+ -khtml-user-select: none;
+ -moz-user-select: none;
+ -ms-user-select: none;
+  user-select: none;
+}
+
 .tl-edges {
   overflow-y: hidden;
 }
